# Stack_Scratch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.MD  package-lock.json  stack_linked_list.cpp  stack_templates_implement.cpp  undo_redo_checklist.md
.github/: CODEOWNERS
.github/workflows/: c_test.yaml  commit-check.yml
case_study/: readme.md  use_LinkedList.cpp  use_array.cpp
case_study/advanced/: m  undo_redo.cpp
compile/: m
iterator/: implementation_iterator.cpp  introduce_iterator.cpp  variant_iterator.cpp
src/: m  stack.cpp  stack_linked_list.cpp  stack_templates_implement.cpp
test/: stack_test.cpp
